--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GOOGLE_API_KEY="AIzaSyCjebHzikaS5aHUETLPYhHgscTTL29dA3E"
-FINANCE_KEY="HNP993R9WZ95YAW8"
+GOOGLE_API_KEY="AIzaSyCUETLPYhHgscTTL29dA3E"
+FINANCE_KEY="HNP9YAW8"
